<resources>
    <string name="app_name">Assignment2</string>
    <string name="fname_TextView">First Name</string>
    <string name="fname">First Name</string>
    <string name="lname_TextView">Last Name</string>
    <string name="lname">Last Name</string>
    <string name="age_TextView">Age</string>
    <string name="ageText">Age</string>
    <string name="email_TextView">Email</string>
    <string name="emailText">Email</string>
    <string name="phone_TextView">Phone</string>
    <string name="phoneText">Phone</string>
    <string name="majorButton_TextView">Major</string>
    <string name="majorButtonText">Major</string>
    <string name="major_title_label">Major</string>
    <string name="major_dgree_label">SDSU Advance Degrees</string>
    <string name="major_select_label">Major</string>
    <string name="cancel_button_label">Cancel</string>
    <string name="done_button_label">Done</string>


    <string name="PHD_label">Doctor of Philosophy (Ph.D.)</string>
    <string name="Edd_label">Doctor of Education (Ed.D.)</string>
    <string name="MA_label">Master of Arts (MA)</string>
    <string name="MS_label">Master of Science (MS)</string>
    <string name="MFA_label">Master of Fine Arts (MFA)</string>
    <string name="PMD_label">Professional Master\'s Degrees</string>

    <string-array name="sdsuAdvDegrees">
        <item>Doctor of Philosophy (Ph.D.)</item>
        <item>Doctor of Education (Ed.D.)</item>
        <item>Master of Arts (MA)</item>
        <item>Master of Science (MS)</item>
        <item>Master of Fine Arts (MFA)</item>
        <item>Professional Master's Degrees</item>
    </string-array>

    <string-array name="phd_list">
        <item>Bioengineering</item>
        <item>Biology</item>
        <item>Chemistry</item>
        <item>Clinical Psychology</item>
        <item>Computational Science</item>
        <item>Ecology</item>
        <item>Education</item>
        <item>Engineering/Bioengineering</item>
        <item>Engineering/Electrical and Computer</item>
        <item>Engineering/Mechanical and Aerospace</item>
        <item>Engineering/Structural</item>
        <item>Evolutionary Biology</item>
        <item>Geography</item>
        <item>Geophysics</item>
        <item>Language and Communicative Disorders</item>
        <item>Mathematics and Science Education</item>
        <item>Public Health</item>
    </string-array>

    <string-array name="edd_list">
        <item>Educational Leadership/Pre K-12</item>
        <item>Educational Leadership/Post Secondary Community College</item>
    </string-array>

    <string-array name="ma_list">
        <item>Anthropology</item>
        <item>Art</item>
        <item>Biology</item>
        <item>Chemistry</item>
        <item>Chicana and Chicano Studies</item>
        <item>Communication</item>
        <item>Speech, Language and Hearing Sciences</item>
        <item>Economics</item>
        <item>Education</item>
        <item>English</item>
        <item>French</item>
        <item>Geography</item>
        <item>History</item>
        <item>Interdisciplinary Studies</item>
        <item>Journalism and Media Studies</item>
        <item>Latin American Studies</item>
        <item>Liberal Arts and Sciences</item>
        <item>Linguistics</item>
        <item>Mathematics</item>
        <item>Music</item>
        <item>Philosophy</item>
        <item>Physics</item>
        <item>Political Science</item>
        <item>Psychology</item>
        <item>Rhetoric and Writing Studies</item>
        <item>Sociology</item>
        <item>Spanish</item>
        <item>Television, Film and New Media Production</item>
        <item>Theatre Arts</item>
        <item>Women's Studies</item>
    </string-array>

    <string-array name="ms_list">
        <item>Accountancy</item>
        <item>Aerospace Engineering</item>
        <item>Applied Mathematics</item>
        <item>Astronomy</item>
        <item>Bioengineering</item>
        <item>Biology</item>
        <item>Bioinformatics and Medical Informatics</item>
        <item>Biomedical Quality Systems</item>
        <item>Business Administration</item>
        <item>Chemistry</item>
        <item>Child Development</item>
        <item>Civil Engineering</item>
        <item>Computational Science</item>
        <item>Computer Science</item>
        <item>Counseling</item>
        <item>Criminal Justice and Criminology</item>
        <item>Electrical Engineering</item>
        <item>Exercise Physiology</item>
        <item>Geography</item>
        <item>Geological Sciences</item>
        <item>Gerontology</item>
        <item>Homeland Security</item>
        <item>Hospitality and Tourism Management</item>
        <item>Information Systems</item>
        <item>Interdisciplinary Studies</item>
        <item>Kinesiology</item>
        <item>Mechanical Engineering</item>
        <item>Medical Physics</item>
        <item>Microbiology</item>
        <item>Nursing</item>
        <item>Nutritional Sciences</item>
        <item>Physics</item>
        <item>Psychology</item>
        <item>Public Health</item>
        <item>Regulatory Affairs</item>
        <item>Rehabilitation Counseling</item>
        <item>Statistics</item>

    </string-array>

    <string-array name="mfa_list">
        <item>Art</item>
        <item>Creative Writing</item>
        <item>Design and Technical Theatre</item>
        <item>Musical Theatre</item>
        <item>Theatre Arts</item>
    </string-array>

    <string-array name="pmd_list">
        <item>Master of Business Administration (MBA)</item>
        <item>Master of City Planning (MCP)</item>
        <item>Master of Engineering (ME)</item>
        <item>Master of Music (MM)</item>
        <item>Master of Public Administration(MPA)</item>
        <item>Master of Public Health (MPH)</item>
        <item>Master of Social Work (MSW)</item>
    </string-array>


</resources>
